<resources>
    <string name="app_name">RetailStore</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter_results">Filter Results</string>
    <string name="activity_title">Inmar Retail</string>
    <string name="loading">Loading...</string>
    <string name="no_sku_found">No SKU found</string>
    <string name="sku">SKU</string>
    <string name="sku_desc">SKU Description</string>
    <string name="location">Location</string>
    <string name="dept">Dept</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub-category</string>
    <string name="title_activity_insert_sku">Add SKU</string>
    <string name="save">Save</string>
    <string name="no_sku_desc">Enter SKU description</string>
    <string name="sku_added">SKU added</string>
    <string name="sku_adding_failed">Failed adding SKU</string>
    <string name="sku_duplicate">SKU already exists, Change the SKU description</string>
    <string name="label_location">Location: %1$s</string>
    <string name="label_dept">Dept: %1$s</string>
    <string name="label_category">Category: %1$s</string>
    <string name="label_sub_category">Sub-Category: %1$s</string>
    <string name="delete_sku">Confirm delete</string>
    <string name="delete_sku_message">Do you want to delete SKU [%1$s]?</string>
    <string name="sku_deleted">SKU deleted</string>
    <string name="filter_results">Filter results</string>
    <string name="filter_sku_list">Filter SKU list</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login/register -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Incorrect credentials</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_confirm_pwd_different">Confirm password must be same</string>
    <string name="authentication_success">User authenticated</string>
    <string name="authentication_failed">Authenticated failed</string>
    <string name="user_registered">User registered</string>
</resources>
